--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@clerk/clerk-expo": "^0.20.8",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
+    "@react-navigation/stack": "^6.3.25",
     "expo": "~50.0.11",
+    "expo-font": "~11.10.3",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
+    "graphql": "^15.8.0",
+    "graphql-request": "^6.1.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
